[metadata]
name = amtalarm
version = 0.0.6
author = Felipe Magno de Almeida
author_email = felipe@expertise.dev
description = A package for communicating with Intelbras AMT Alarms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/expertisesolutions/amtalarm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
